--- a/.github/workflows/build-deploy-pudl.yml
+++ b/.github/workflows/build-deploy-pudl.yml
@@ -74,6 +74,7 @@ jobs:
           labels: ${{ steps.docker_metadata.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: x86/64
 
       - id: "auth"
         uses: "google-github-actions/auth@v2"
