--- a/pyproject.toml
+++ b/pyproject.toml
@@ -300,3 +300,7 @@ prettier = ">=3.0"
 python = ">=3.11,<3.12"
 sqlite = ">=3.43"
 curl = ">=8.4.0"
+git = ">=2.40.1"
+jq = ">=1.7"
+unzip = ">=6.0"
+groff = ">=1.22.4"
